test/fail/LostTypeError.err
LostTypeError.agda:23,7-36
x != y of type A
when checking that the expression wrap _ (λ a → P _) (box x) px has
type Wrap Box P (box y)
